--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_APPWRITE_PROJECT=appwrite_projectid
 NEXT_PUBLIC_APPWRITE_DATABASE_ID=appwrite_databaseid
 NEXT_PUBLIC_APPWRITE_WORKSPACES_ID=appwrite_workspaceid
 NEXT_PUBLIC_APPWRITE_MEMBERS_ID=appwrite_membersid
+NEXT_PUBLIC_APPWRITE_PROJECTS_ID=appwrite_projectsid
 NEXT_PUBLIC_APPWRITE_IMAGES_BUCKET_ID=appwrite_storageid
 
 NEXT_APPWRITE_KEY=appwrite_apikey
